Trying to fix wizard not showing

--- a/src/components/Lock.css
+++ b/src/components/Lock.css
@@ -123,7 +123,7 @@
 
 .wizard-container {
   position: relative;
-  z-index: 1002;
+  z-index: 10002;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
